--- a/app/src/main/res/layout/nv_header.xml
+++ b/app/src/main/res/layout/nv_header.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="180dp"
     android:padding="10dp"
-    android:background="?attr/colorPrimary">
+    android:background="?attr/colorPrimary"
+    android:fitsSystemWindows="true"
+    app:statusBarScrim="@android:color/transparent">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/icon_image"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/nav_icon"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:fitsSystemWindows="true"/>
     <TextView
         android:id="@+id/username"
         android:layout_width="wrap_content"
